Add swagger documentation
